--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <p>© <span id="year"></span> Behal Chemicals — Eco Luxury Hotel Amenities</p>
     </div>
     <div class="socials">
-      <a href="https://www.instagram.com/behalchemical" target="_blank" rel="noopener">Instagram</a>
+      <a href="https://www.instagram.com/behal_chemicals" target="_blank" rel="noopener">Instagram</a>
       <a href="mailto:info@behalchemical.com">Email</a>
     </div>
   </div>
